--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
             <div class="nav-left">
                 <ul>
                 <li>
-                    <img src="image/dw-favicon-final.png" alt="logo"/>
+                    <img src="assets/Image/dw-favicon-final.png" alt=""/>
                 </li>
                 <li>
                     <a href="index.html">Home</a>
