--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <div class="nav-left">
                 <ul>
                     <li>
-                        <img src="image/dw-favicon-final.png" alt="logo"/>
+                        <img src="assets/Image/dw-favicon-final.png" alt=""/>
                     </li>
                     <li>
                         <a href="index.html">Home</a>
@@ -63,7 +63,7 @@
                     border-radius: 20px;
                     box-shadow: 0 0 10px rgb(187, 186, 186);
                     ">
-                    <img style="width: 100%; border-radius: 20px 20px 0 0;" src="Image/FotoTugas.jpg" alt="Foto">
+                    <img style="width: 100%; border-radius: 20px 20px 0 0;" src="assets/Image/FotoTugas.jpg" alt="Foto">
                     <h2>Rhoma Irama</h2>
                     <p>Fullstack Developer</p>
 
